feat: add registration and login

--- a/InstantMessagingApp.Application/InstantMessagingApp.Application.csproj
+++ b/InstantMessagingApp.Application/InstantMessagingApp.Application.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\InstantMessagingApp.Domain\InstantMessagingApp.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
