--- a/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
+++ b/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\InstantMessagingApp.Domain\InstantMessagingApp.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    </ItemGroup>
+
 </Project>
