--- a/InstantMessagingApp.WebApi/InstantMessagingApp.WebApi.csproj
+++ b/InstantMessagingApp.WebApi/InstantMessagingApp.WebApi.csproj
@@ -9,11 +9,18 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\InstantMessagingApp.Application\InstantMessagingApp.Application.csproj" />
       <ProjectReference Include="..\InstantMessagingApp.Infrastructure\InstantMessagingApp.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\" />
     </ItemGroup>
 
 </Project>
