--- a/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
+++ b/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     </ItemGroup>
