--- a/InstantMessagingApp.WebApi/appsettings.json
+++ b/InstantMessagingApp.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSettings": {
+    "SecretKey": "mysecretkeyasdadsasdadsadsasdadsads",
+    "Expires": "00:02:00"
+  }
 }
