--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,10 @@
 services:
   app:
     build:
-      context: . .
+      context: . 
       dockerfile: InstantMessagingApp.WebApi/Dockerfile
     container_name: chat_api
+    restart: always
     ports:
      - "8080:8080"
     environment:
@@ -11,7 +12,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
   
   postgres:
     image: postgres:15
@@ -19,7 +21,19 @@ services:
     restart: always
     ports:
       - "5432:5432"
+    environment:
+      - POSTGRES_DB=ChatMessageDb
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     env_file:
       - .env
-    
-    
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      
+volumes:
+  db_data:
