add the ability to get message history

--- a/InstantMessagingApp.WebApi/appsettings.json
+++ b/InstantMessagingApp.WebApi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Telegram": {
+    "BotToken": "8198548624:AAEZUEyy1RV8SA1fpUX8u1wjZ3RZKaN8ckA"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
