--- a/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
+++ b/InstantMessagingApp.Infrastructure/InstantMessagingApp.Infrastructure.csproj
@@ -23,6 +23,7 @@
       <PackageReference Include="Npgsql" Version="9.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
+      <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
     <ItemGroup>
