--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,67 @@
+# Основные системные файлы
+.DS_Store
+Thumbs.db
+
+# Файлы пользователей и настроек IDE
+.vscode/
+.idea/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+
+logs/
+*.log
+!logs/.gitkeep
+tmp/
+temp/
+
+# Папки билдов и артефактов
 bin/
 obj/
-/packages/
-riderModule.iml
-/_ReSharper.Caches/
+out/
+TestResults/
+.publish/
+dist/
+coverage/
+
+
+*.dll
+*.exe
+*.pdb
+*.mdb
+*.ilk
+*.idb
+*.map
+*.so
+*.dylib
+*.lib
+*.a
+*.exp
+*.iobj
+*.ipdb
+
+
+*.nupkg
+*.snupkg
+project.lock.json
+package-lock.json
+packages/
+.nuget/
+.nuget_cache/
+.nuget_packages/
+
+
+secrets.json
+appsettings.Development.json
+appsettings.json
+.env
+*.key
+*.crt
+*.pfx
+*.pem
+*.cert
+
+
+.idea_modules/
