Add bot token to .env, fix message service

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DEFAULT_CONNECTION=Host=postgres;Port=5432;Database=ChatMessageDb;Username=postgres;Password=postgres
 ASPNETCORE_ENVIRONMENT=Development
+TELEGRAM__BOTTOKEN="8198548624:AAEZUEyy1RV8SA1fpUX8u1wjZ3RZKaN8ckA"
